<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_version">1.1</string>
    
    
    <string name="app_name">MetroCalc</string>
<string name="plus1">+$0.01</string>
<string name="plus5">+$0.05</string>
<string name="plus25">+$0.25</string>
<string name="plus100">+$1.00</string>
<string name="minus1">-$0.01</string>
<string name="minus5">-$0.05</string>
<string name="minus25">-$0.25</string>
<string name="minus100">-$1.00</string>
<string name="currentValueLabel">Current Value</string>
<string name="add">Add</string>
<string name="newTotal">new total</string>

<string name="bonus">7% bonus</string>

<string name="preferences">MetroCalc Preferences</string>
<string name="settings">Settings</string>
<string name="about">About MetroCalc</string>
<string-array name="wasteThresholdEntries"><item>$0.00</item>
<item>$0.05</item>
<item>$0.10</item>
<item>$0.15</item>
<item>$0.20</item>
</string-array>
<string-array name="wasteThresholdEntryValues"><item>0</item>
<item>5</item>
<item>10</item>
<item>15</item>
<item>20</item>
</string-array>
<string name="waste">leftover change</string>
<string name="rides">rides</string>
<string name="aboutContent">by Vineet Kumar\n
<a href="http://doorstop.net/">http://doorstop.net/</a>\n
<a href="mailto:vineet+metrocalc@doorstop.net">vineet+metrocalc@doorstop.net</a>
</string>
</resources>
